--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
@@ -24,8 +24,45 @@
         
     </UserControl.Resources>
 
-    <dxlc:LayoutGroup Header="Pull Requests"
-        Orientation="Vertical"  View="Tabs">
+    <dxlc:LayoutControl Orientation="Vertical">
+
+    <dxlc:LayoutGroup Header="Pull Requests" >
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <!--<RowDefinition Height="Auto" />-->
+            </Grid.RowDefinitions>
+
+            <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" 
+                                            Count="{Binding Results.Count, Mode=TwoWay}"/>
+
+            <dxg:GridControl x:Name="grdResults" Grid.Row="1"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <dxg:GridColumn FieldName="title" BestFitModeOnSourceChange="VisibleRows"/>
+                <dxg:GridColumn FieldName="description" BestFitModeOnSourceChange="VisibleRows"/>
+                <dxg:GridColumn FieldName="pullRequestId" />
+                <dxg:GridColumn FieldName="codeReviewId" />
+                <dxg:GridColumn FieldName="status" />
+                <dxg:GridColumn FieldName="createdBy.uniqueName" BestFitModeOnSourceChange="VisibleRows"/>
+                <dxg:GridColumn FieldName="creationDate" />
+                <!--<dxg:GridColumn FieldName="url" />-->
+            </dxg:GridControl>
+
+            <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding Results.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+        </Grid>
+
+    </dxlc:LayoutGroup>
+    
+    <dxlc:LayoutGroup Orientation="Vertical"  View="Tabs">
         
         <dxlc:LayoutGroup.GroupBoxStyle>
             <Style TargetType="dxlc:GroupBox">
@@ -36,44 +73,6 @@
                 <Setter Property="TitleVisibility" Value="Collapsed" />
             </Style>
         </dxlc:LayoutGroup.GroupBoxStyle>
-
-        <dxlc:LayoutGroup Header="Pull Requests" >
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-
-                <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" 
-                                            Count="{Binding Results.Count, Mode=TwoWay}"/>
-
-                <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Results.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <dxg:GridColumn FieldName="title" />
-                    <dxg:GridColumn FieldName="description" />
-                    <dxg:GridColumn FieldName="pullRequestId" />
-                    <dxg:GridColumn FieldName="codeReviewId" />
-                    <dxg:GridColumn FieldName="status" />
-                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                    <dxg:GridColumn FieldName="creationDate" />
-                    <!--<dxg:GridColumn FieldName="url" />-->
-                </dxg:GridControl>
-
-                <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
-
-                <!--<TextBlock Text="{Binding Message}" Grid.Row="3" />-->
-            </Grid>
-            
-        </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Attachments" >
             <Grid>
@@ -127,15 +126,15 @@
 
                 <dxg:GridControl x:Name="grdResultsCommits" Grid.Row="1"
                     ItemsSource="{Binding ResultsCommits.ResultItems}"
-                    SelectedItem="{Binding ResultsCommits.SelectedItem}"
+                    SelectedItem="{Binding SelectedCommit}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
                     <dxg:GridColumn FieldName="commitId" />
-                    <dxg:GridColumn FieldName="author.name" />
-                    <dxg:GridColumn FieldName="committer.name" />
-                    <dxg:GridColumn FieldName="comment" />
+                        <dxg:GridColumn FieldName="author.name" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="committer.name" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="comment" BestFitModeOnSourceChange="VisibleRows"/>
                     <!--<dxg:GridColumn FieldName="url" />-->
                 </dxg:GridControl>
 
@@ -167,15 +166,15 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <dxg:GridColumn FieldName="author.uniqueName" />
-                    <dxg:GridColumn FieldName="commonRefCommit.commitId" />
-                    <dxg:GridColumn FieldName="createdDate" />
-                    <dxg:GridColumn FieldName="description" />
-                    <dxg:GridColumn FieldName="hasMoreCommits" />
-                    <dxg:GridColumn FieldName="id" />
-                    <dxg:GridColumn FieldName="push.pushId" />
-                    <dxg:GridColumn FieldName="reason" />
-                    <dxg:GridColumn FieldName="updatedDate" />
+                        <dxg:GridColumn FieldName="author.uniqueName" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="commonRefCommit.commitId" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="createdDate" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="description" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="hasMoreCommits" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="id" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="push.pushId" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="reason" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="updatedDate" BestFitModeOnSourceChange="VisibleRows"/>
                     <!--<dxg:GridColumn FieldName="url" />-->
                 </dxg:GridControl>
 
@@ -240,18 +239,18 @@
 
                 <dxg:GridControl x:Name="grdResultsProperties" Grid.Row="1"
                     ItemsSource="{Binding ResultsProperties.ResultItems}"
-                    SelectedItem="{Binding ResultsProperties.SelectedItem}"
+                    SelectedItem="{Binding ResultsProperties.SelectedItem.value}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <dxg:GridColumn FieldName="title" />
-                    <dxg:GridColumn FieldName="description" />
-                    <dxg:GridColumn FieldName="pullRequestId" />
-                    <dxg:GridColumn FieldName="codeReviewId" />
-                    <dxg:GridColumn FieldName="status" />
-                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                    <dxg:GridColumn FieldName="creationDate" />
+                        <dxg:GridColumn FieldName="value.MicrosoftGitPullRequestIsDraft.type" />
+                        <dxg:GridColumn FieldName="value.MicrosoftGitPullRequestIsDraft.value" />
+                        <dxg:GridColumn FieldName="MicrosoftGitPullRequestSourceRefName.type" />
+                        <dxg:GridColumn FieldName="MicrosoftGitPullRequestSourceRefName.value" />
+                        <dxg:GridColumn FieldName="MicrosoftGitPullRequestTargetRefName.type" />
+                        <dxg:GridColumn FieldName="MicrosoftGitPullRequestTargetRefName.value" />                    
+
                     <!--<dxg:GridColumn FieldName="url" />-->
                 </dxg:GridControl>
 
@@ -283,12 +282,14 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    
                     <dxg:GridColumn FieldName="displayName" />
                     <dxg:GridColumn FieldName="uniqueName" />
                     <dxg:GridColumn FieldName="isRequired" />
                     <dxg:GridColumn FieldName="vote" />
                     <dxg:GridColumn FieldName="hasDeclined" />
                     <dxg:GridColumn FieldName="isFlagged" />
+                    
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
@@ -319,6 +320,7 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    
                     <dxg:GridColumn FieldName="title" />
                     <dxg:GridColumn FieldName="description" />
                     <dxg:GridColumn FieldName="pullRequestId" />
@@ -327,6 +329,7 @@
                     <dxg:GridColumn FieldName="createdBy.uniqueName" />
                     <dxg:GridColumn FieldName="creationDate" />
                     <!--<dxg:GridColumn FieldName="url" />-->
+                    
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
@@ -409,5 +412,7 @@
         </dxlc:LayoutGroup>
 
     </dxlc:LayoutGroup>
+    
+    </dxlc:LayoutControl>
 
 </vncmvvm:ViewBase>
