--- a/AZDORestApiExplorer/Resources/Xaml/Display_StylesAndTemplates.xaml
+++ b/AZDORestApiExplorer/Resources/Xaml/Display_StylesAndTemplates.xaml
@@ -1,12 +1,19 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
-
+    mc:Ignorable="d"
+    
+    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+    xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
+    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"    
+>
+    
+   
     <!-- This is used to make the design experience better -->
     <Style x:Key="vncDesignStyleUC" TargetType="UserControl">
         <Setter Property="Background" Value="White" />
@@ -37,6 +44,25 @@
     <SolidColorBrush x:Key="TestColor" Color="#FFB6007B" />
     <SolidColorBrush x:Key="WorkItemTypeColor" Color="#FFA68ADE" />
 
+    <Style x:Key="DragableLayoutPanel" TargetType="{x:Type dxdo:LayoutPanel}">
+        <!--<Setter Property="ShowPinButton" Value="False" />-->
+        <Setter Property="AllowClose" Value="False" />
+        <Setter Property="AllowDrag" Value="True" />
+    </Style>
+    
+    <Style x:Key="HiddenDragableLayoutPanel" TargetType="{x:Type dxdo:LayoutPanel}">
+        <!--<Setter Property="ShowPinButton" Value="False" />-->
+        <Setter Property="AllowClose" Value="False" />
+        <Setter Property="AllowDrag" Value="True" />
+        <Setter Property="AutoHidden" Value="True" />
+    </Style>
+
+    <Style x:Key="NotDragableLayoutPanel" TargetType="{x:Type dxdo:LayoutPanel}">
+        <Setter Property="ShowPinButton" Value="False" />
+        <Setter Property="AllowClose" Value="False" />
+        <Setter Property="AllowDrag" Value="False" />
+    </Style>
+
     <Style x:Key="GetLayoutGroup" TargetType="{x:Type dxlc:LayoutGroup}">
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Top" />
@@ -50,18 +76,21 @@
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="CornerRadius" Value="5" />
     </Style>
+    
     <Style x:Key="CountBorder" TargetType="{x:Type Border}">
         <Setter Property="BorderBrush" Value="Black" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="CornerRadius" Value="5" />
         <Setter Property="HorizontalAlignment" Value="Center" />
     </Style>
+    
     <Style x:Key="CountTextBlock" TargetType="{x:Type TextBlock}">
         <Setter Property="Foreground" Value="Black" />
         <!--<Setter Property="FontSize" Value="18" />-->
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Margin" Value="0,0,5,0" />
     </Style>
+    
     <Style x:Key="CountStackPanel" TargetType="{x:Type StackPanel}">
         <Setter Property="Orientation" Value="Horizontal" />
         <Setter Property="Margin" Value="-3,-5,-2,-3" />
