--- a/AZDORestApiExplorer.Build/Presentation/Views/BuildMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/BuildMain.xaml
@@ -34,7 +34,11 @@
 
     </UserControl.Resources>
 
-    <Grid>
+    <dxlc:LayoutControl Orientation="Vertical">
+
+        <dxlc:LayoutGroup Header="Builds" >
+            
+            <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -54,24 +58,30 @@
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             
             <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="buildNumber" />
-            <dxg:GridColumn FieldName="definition.name" />
-            <dxg:GridColumn FieldName="sourceBranch" />
+            <dxg:GridColumn FieldName="buildNumber" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="definition.name" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="sourceBranch" BestFitModeOnSourceChange="VisibleRows"/>
             <dxg:GridColumn FieldName="sourceVersion" />
-            <dxg:GridColumn FieldName="repository.name" />
-            <dxg:GridColumn FieldName="queue.name" />
-            <dxg:GridColumn FieldName="queue.pool.name" />
+            <dxg:GridColumn FieldName="repository.name" BestFitModeOnSourceChange="VisibleRows" />
+            <dxg:GridColumn FieldName="queue.name" BestFitModeOnSourceChange="VisibleRows" />
+            <dxg:GridColumn FieldName="queue.pool.name" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="queueTime" />
+            <dxg:GridColumn FieldName="startTime" />
+            <dxg:GridColumn FieldName="finishTime" />
+            <!--<dxg:GridColumn FieldName="finishTime" EditSettings="{dxe:TextEditSettings DisplayFormat=G}" />-->
+            
             <!--<dxg:GridColumn FieldName="plan.planId" />--> <!--This is Array-->
             <dxg:GridColumn FieldName="project.name" />
-            <dxg:GridColumn FieldName="requestedFor.displayName" />
-            <dxg:GridColumn FieldName="requestedBy.displayName" />
+            <dxg:GridColumn FieldName="requestedFor.displayName" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="requestedBy.displayName" BestFitModeOnSourceChange="VisibleRows"/>
 
             <dxg:GridColumn FieldName="parameters" />
             <dxg:GridColumn FieldName="reason" />
-            <dxg:GridColumn FieldName="triggerInfo.cisourceBranch" />
-            <dxg:GridColumn FieldName="triggerInfo.cisourceSha" />
-            <dxg:GridColumn FieldName="triggerInfo.citriggerRepository" />
-            <dxg:GridColumn FieldName="triggerInfo.scheduleName" />            
+            <dxg:GridColumn FieldName="triggerInfo.cimessage" BestFitModeOnSourceChange="VisibleRows"/>            
+            <dxg:GridColumn FieldName="triggerInfo.cisourceBranch" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="triggerInfo.cisourceSha" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="triggerInfo.citriggerRepository" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="triggerInfo.scheduleName" BestFitModeOnSourceChange="VisibleRows"/>            
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
@@ -79,5 +89,61 @@
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
     </Grid>
+
+        </dxlc:LayoutGroup>
+
+
+        <dxlc:LayoutGroup Orientation="Vertical"  View="Tabs">
+
+            <dxlc:LayoutGroup.GroupBoxStyle>
+                <Style TargetType="dxlc:GroupBox">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="BorderBrush" Value="Transparent" />
+                    <Setter Property="BorderThickness" Value="0" />
+                    <Setter Property="Padding" Value="0" />
+                    <Setter Property="TitleVisibility" Value="Collapsed" />
+                </Style>
+            </dxlc:LayoutGroup.GroupBoxStyle>
+
+            <dxlc:LayoutGroup Header="Something About Build" >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <vncazdopv:CommonGridHeader x:Name="commonGridHeaderAttachments" Grid.Row="0" 
+                                            Count="{Binding ResultsAttachments.Count, Mode=TwoWay}"/>
+
+                    <dxg:GridControl x:Name="grdResultsAttachments" Grid.Row="1"
+                    ItemsSource="{Binding ResultsAttachments.ResultItems}"
+                    SelectedItem="{Binding ResultsAttachments.SelectedItem}"
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <dxg:GridColumn FieldName="title" />
+                        <dxg:GridColumn FieldName="description" />
+                        <dxg:GridColumn FieldName="pullRequestId" />
+                        <dxg:GridColumn FieldName="codeReviewId" />
+                        <dxg:GridColumn FieldName="status" />
+                        <dxg:GridColumn FieldName="createdBy.uniqueName" />
+                        <dxg:GridColumn FieldName="creationDate" />
+                        <!--<dxg:GridColumn FieldName="url" />-->
+                    </dxg:GridControl>
+
+                    <dxe:TextEdit Grid.Row="2"
+                    Text="{Binding ResultsAttachments.SelectedItem.url}"
+                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+
+                </Grid>
+
+            </dxlc:LayoutGroup>
+
+        </dxlc:LayoutGroup>
+
+
+    </dxlc:LayoutControl>
 
 </vncmvvm:ViewBase>
