--- a/AZDORestApiExplorer.Git/Presentation/Views/CommitMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/CommitMain.xaml
@@ -52,17 +52,30 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="commitId" />
-            <dxg:GridColumn FieldName="author.date" />
-            <dxg:GridColumn FieldName="author.name" />
-            <dxg:GridColumn FieldName="committer.date" />
-            <dxg:GridColumn FieldName="committer.name" />
-            <dxg:GridColumn FieldName="comment" />
-            <dxg:GridColumn FieldName="changeCounts.Add" />
-            <dxg:GridColumn FieldName="changeCounts.Delete" />
-            <dxg:GridColumn FieldName="changeCounts.Edit" />
-            <dxg:GridColumn FieldName="remoteUrl" />
+            
+            <dxg:GridColumn FieldName="commitId" BestFitModeOnSourceChange="VisibleRows"/>
+            
+            <dxg:GridColumn FieldName="author.name" Header="Author" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="author.date" Header="Authored Date" Width="150">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>
+            
+            <dxg:GridColumn FieldName="committer.name" Header="Committer" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="committer.date" Header="Committer Date" Width="150">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>
+
+            <dxg:GridColumn FieldName="comment" Width="300"/>
+            <dxg:GridColumn FieldName="changeCounts.Add" Header="Adds" Width="50"/>
+            <dxg:GridColumn FieldName="changeCounts.Delete" Header="Deletes" Width="50"/>
+            <dxg:GridColumn FieldName="changeCounts.Edit" Header="Edits" Width="50"/>
+            <dxg:GridColumn FieldName="remoteUrl" BestFitModeOnSourceChange="VisibleRows"/>
             <dxg:GridColumn FieldName="commentTruncated" />
+            
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
