--- a/AZDORestApiExplorer.Git/Presentation/Views/ItemMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/ItemMain.xaml
@@ -52,11 +52,11 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="objectId" />
-            <dxg:GridColumn FieldName="gitObjectType" />
-            <dxg:GridColumn FieldName="commitId" />
-            <dxg:GridColumn FieldName="path" />
-            <dxg:GridColumn FieldName="isFolder" />
+            <dxg:GridColumn FieldName="objectId" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="gitObjectType" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="commitId" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="path" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="isFolder" BestFitModeOnSourceChange="VisibleRows"/>
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
