--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestWorkItemMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestWorkItemMain.xaml
@@ -1,8 +1,8 @@
 <vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Git.Presentation.Views.CommitChangeMain"
+    x:Class="AZDORestApiExplorer.Git.Presentation.Views.PullRequestWorkItemMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://prismlibrary.com/"
+    xmlns:prism="http://www.codeplex.com/prism"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
@@ -21,7 +21,7 @@
     xmlns:views="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Git.Presentation.ViewModels"
 
-    prism:ViewModelLocator.AutoWireViewModel="False"
+    prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
@@ -52,19 +52,13 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-            <!--<dxg:GridColumn FieldName="item.commitId" />-->
-
-            <dxg:GridColumn FieldName="item.path" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="item.isFolder" />
-            <dxg:GridColumn FieldName="changeType" />
-            <dxg:GridColumn FieldName="item.objectId" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="item.originalObjectId" BestFitModeOnSourceChange="VisibleRows"/>
-
+            
+            <dxg:GridColumn FieldName="id" />
+            
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
-            Text="{Binding Results.SelectedItem.item.url}"
+            Text="{Binding Results.SelectedItem.url}"
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
     </Grid>
