--- a/AZDORestApiExplorer.Git/Presentation/Views/RepositoryMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/RepositoryMain.xaml
@@ -38,49 +38,107 @@
     </UserControl.Resources>
 
     <dxlc:LayoutControl Orientation="Vertical">
-        <dxlc:LayoutGroup >
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
 
-                <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="2*" />
+            </Grid.RowDefinitions>
+
+            <dxlc:LayoutGroup Grid.Row="0">
+                
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
                                     Count="{Binding Results.Count, Mode=TwoWay}"/>
 
-                <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Results.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows"/>
-                    <!--<dxg:GridColumn FieldName="id" />-->
-                    <!--<dxg:GridColumn FieldName="url" />-->
-                    <dxg:GridColumn FieldName="project.name" BestFitModeOnSourceChange="VisibleRows"/>
-                    <dxg:GridColumn FieldName="defaultBranch" BestFitModeOnSourceChange="VisibleRows"/>
-                    <dxg:GridColumn FieldName="size" BestFitModeOnSourceChange="VisibleRows"/>
-                    <dxg:GridColumn FieldName="isDisabled" BestFitModeOnSourceChange="VisibleRows"/>
-                    <dxg:GridColumn FieldName="isFork" BestFitModeOnSourceChange="VisibleRows"/>
-                    <dxg:GridColumn FieldName="remoteUrl" BestFitModeOnSourceChange="VisibleRows"/>
-                    <dxg:GridColumn FieldName="sshUrl" BestFitModeOnSourceChange="VisibleRows"/>
-                    <dxg:GridColumn FieldName="webUrl" BestFitModeOnSourceChange="VisibleRows"/>
+                    <dxg:GridControl x:Name="grdResults" Grid.Row="1"
+                        ItemsSource="{Binding Results.ResultItems}"
+                        SelectedItem="{Binding Results.SelectedItem}"
+                        FontSize="12"
+                        ScrollViewer.CanContentScroll="True"
+                        ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                        ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        
+                        <dxg:GridColumn FieldName="name" Header="Repository Name" BestFitModeOnSourceChange="VisibleRows"/>
+                        <!--<dxg:GridColumn FieldName="id" />-->
+                        <!--<dxg:GridColumn FieldName="url" />-->
+                        <dxg:GridColumn FieldName="project.name" Header="Team Project" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="defaultBranch" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="size" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="isDisabled" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="isFork" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="remoteUrl" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="sshUrl" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="webUrl" BestFitModeOnSourceChange="VisibleRows"/>
 
-                </dxg:GridControl>
+                    </dxg:GridControl>
 
-                <dxe:TextEdit Grid.Row="2"
-            Text="{Binding Results.SelectedItem.url}"
-            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
+                    <dxe:TextEdit Grid.Row="2"
+                        Text="{Binding Results.SelectedItem.url}"
+                        TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
-            </Grid>
-        </dxlc:LayoutGroup>
+                </Grid>
+                
+            </dxlc:LayoutGroup>
 
-        <!--<dxlc:LayoutGroup Header="Pull Requests" >
-            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestMainRegion}" />
-        </dxlc:LayoutGroup>-->
+            <dxlc:LayoutGroup Grid.Row="1" Orientation="Vertical"  View="Tabs">
 
+                <dxlc:LayoutGroup.GroupBoxStyle>
+                    <Style TargetType="dxlc:GroupBox">
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="BorderBrush" Value="Transparent" />
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="Padding" Value="0" />
+                        <Setter Property="TitleVisibility" Value="Collapsed" />
+                    </Style>
+                </dxlc:LayoutGroup.GroupBoxStyle>
+
+                <!--<dxlc:LayoutGroup Header="Blobs" >
+                    
+                </dxlc:LayoutGroup>-->
+
+                <dxlc:LayoutGroup Header="Commits" >
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.CommitMainRegion}" />
+                </dxlc:LayoutGroup>
+
+                <dxlc:LayoutGroup Header="Import Requests" >
+
+                </dxlc:LayoutGroup>
+
+                <dxlc:LayoutGroup Header="Items" >
+
+                </dxlc:LayoutGroup>
+
+                <dxlc:LayoutGroup Header="Merges" >
+
+                </dxlc:LayoutGroup>
+
+                <dxlc:LayoutGroup Header="Pull Requests" >
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestMainRegion}" />
+                </dxlc:LayoutGroup>
+
+                <dxlc:LayoutGroup Header="Pushes" >
+
+                </dxlc:LayoutGroup>
+
+                <dxlc:LayoutGroup Header="Refs" >
+
+                </dxlc:LayoutGroup>
+
+                <dxlc:LayoutGroup Header="Stats" >
+
+                </dxlc:LayoutGroup>
+
+            </dxlc:LayoutGroup>
+
+        </Grid>
+        
     </dxlc:LayoutControl>
 
 </vncmvvm:ViewBase>
